<resources>
    <string name="app_name">نشاطات المجلس</string>
    <string name="default_notification_channel_id">EVENTSNOTIFY_CHANNEL_ID</string>
    <string name="channel_description">هذه قناة تنبيهات الاحداث للتطبيق</string>
    <string name="channel_name">الاحداث</string>

    //eventDetails Activity Layout strings
    <string name="tv_title_start">اللجنة: </string>
    <string name="tv_title">العنوان</string>
    <string name="tv_body_start">الموضوع: </string>
    <string name="tv_body">الموضوع</string>
    <string name="tv_date_start">التاريخ: </string>
    <string name="tv_date">التاريخ</string>
    <string name="tv_time_start">الوقت: </string>
    <string name="tv_time">الوقت</string>
    <string name="btn_all_events">جميع النشاطات</string>

    //events details row for the recyclerView
    <string name="row_tv_title_precedent">جهة النشاط:</string>
    <string name="row_tv_title">العنوان</string>
    <string name="row_tv_subject_precedent">الموضوع:</string>
    <string name="row_tv_subject">الموضوع</string>
    <string name="row_tv_date_precedent">التاريخ:</string>
    <string name="row_tv_date">التاريخ</string>
    <string name="row_tv_time_precedent">الوقت:</string>
    <string name="row_tv_time">الوقت</string>
    <string name="row_tv_line_separator">---------------------------------------------------------------------</string>
</resources>
