<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <!-- event title layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title_precedent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_tv_title_precedent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/row_tv_title" />
    </LinearLayout>

    <!-- event subject layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_subject_precedent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_tv_subject_precedent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/row_tv_subject" />
    </LinearLayout>
</LinearLayout>